--- a/Templates/AppSource App/.github/workflows/CreateApp.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateApp.yaml
@@ -8,7 +8,7 @@ on:
         required: false
         default: '.'
       name:
-        description: Name 
+        description: Name
         required: true      
       publisher:
         description: Publisher
@@ -19,14 +19,13 @@ on:
       directCommit:
         description: Direct COMMIT (Y/N)
         required: false
-        default: 'N'
+        default: "N"
 
 defaults:
   run:
     shell: PowerShell
-
 jobs:
-  initialization :
+  initialization:
     runs-on: [ windows-latest ]
     outputs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
@@ -34,12 +33,11 @@ jobs:
       - id: init
         uses: microsoft/AL-Go-Actions/WorkflowInitialize@main
         with: 
-          eventId : "DO0092"
+          eventId: "DO0092"
 
   createApp:
     runs-on: [ windows-latest ]
-    needs : [ initialization ]
-
+    needs: [ initialization ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -47,26 +45,27 @@ jobs:
       - name: Read settings
         uses: microsoft/AL-Go-Actions/ReadSettings@main
         with:
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           get: type
 
       - name: Creating a new app
         uses: microsoft/AL-Go-Actions/CreateApp@main
         with:
-          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           project: ${{ github.event.inputs.project }}
           type: ${{ env.type }}
-          publisher: ${{ github.event.inputs.publisher }}
           name: ${{ github.event.inputs.name }}
+          publisher: ${{ github.event.inputs.publisher }}
           idrange: ${{ github.event.inputs.idrange }}
           directCommit: ${{ github.event.inputs.directCommit }}
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
 
-  postProcess :
+  postProcess:
     runs-on: [ windows-latest ]
-    needs : [ initialization , createApp ]
+    needs: [ initialization, createApp ]
     steps:
       - name: Finalizing the workflow
-        id : postProcess
+        id: postProcess
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
         with: 
-          eventId : "DO0092"
-          telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}
+          eventId: "DO0092"
+          telemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
