--- a/Templates/AppSource App/.github/workflows/CreateRelease.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateRelease.yaml
@@ -31,7 +31,7 @@ defaults:
     shell: PowerShell
 
 jobs:
-  initialization :
+  initialization:
     runs-on: [ windows-latest ]
     outputs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
@@ -39,11 +39,11 @@ jobs:
       - id: init
         uses: microsoft/AL-Go-Actions/WorkflowInitialize@main
         with: 
-          eventId : "DO0094"
+          eventId: "DO0094"
 
   CreateRelease:
     runs-on: [ windows-latest ]
-    needs : [ initialization ]
+    needs: [ initialization ]
     outputs:
       artifacts: ${{ steps.analyzeartifacts.outputs.artifacts }}
       upload_url: ${{ steps.createrelease.outputs.upload_url }}
@@ -54,6 +54,7 @@ jobs:
       - name: Read settings
         uses: microsoft/AL-Go-Actions/ReadSettings@main
         with:
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           get: TemplateUrl
 
       - name: Check for updates to AL-Go system files
@@ -110,7 +111,7 @@ jobs:
           body: ${{ steps.createreleasenotes.outputs.releaseNotes }}
 
   UploadArtifacts:
-    runs-on:  windows-latest 
+    runs-on: [ windows-latest ] 
     needs: [ CreateRelease ]
     strategy:
       matrix: ${{ fromJson(needs.CreateRelease.outputs.artifacts) }}
@@ -130,19 +131,18 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           upload_url: ${{ needs.createrelease.outputs.upload_url }}
           asset_path: '${{ matrix.name }}.zip'
           asset_name: '${{ matrix.name }}.zip'
           asset_content_type: application/zip
 
-  postProcess :
+  postProcess:
     runs-on: [ windows-latest ]
-    needs : [ initialization , CreateRelease, UploadArtifacts ]
+    needs: [ initialization, CreateRelease, UploadArtifacts ]
     steps:
       - name: Finalizing the workflow
-        id : postProcess
+        id: postProcess
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
         with: 
-          eventId : "DO0094"
-          telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}  
+          eventId: "DO0094"
+          telemetryScope: ${{ needs.initialization.outputs.telemetryScope }}  
