--- a/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
@@ -20,7 +20,7 @@ defaults:
     shell: PowerShell
 
 jobs:
-  initialization :
+  initialization:
     runs-on: [ windows-latest ]
     outputs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
@@ -28,11 +28,11 @@ jobs:
       - id: init
         uses: microsoft/AL-Go-Actions/WorkflowInitialize@main
         with: 
-          eventId : "DO0093"
+          eventId: "DO0093"
 
   CreateEnvironment:
     runs-on: [ windows-latest ]
-    needs : [ initialization ]
+    needs: [ initialization ]
 
     steps:
       - name: Checkout
@@ -62,13 +62,13 @@ jobs:
             Write-Host "AdminCenterApiCredentials not provided, initiating Device Code flow"
             $ALGoHelperPath = "$([System.IO.Path]::GetTempFileName()).ps1"
             $webClient = New-Object System.Net.WebClient
-            $webClient.CachePolicy = New-Object System.Net.Cache.RequestCachePolicy -argumentList ([System.Net.Cache.RequestCacheLevel]::NoCacheNoStore)
             $webClient.DownloadFile('https://raw.githubusercontent.com/microsoft/AL-Go-Actions/main/AL-Go-Helper.ps1', $ALGoHelperPath)
-            . $ALGoHelperPath -local
-            DownloadAndImportBcContainerHelper -baseFolder $ENV:GITHUB_WORKSPACE
+            . $ALGoHelperPath
+            $BcContainerHelperPath = DownloadAndImportBcContainerHelper -baseFolder $ENV:GITHUB_WORKSPACE
             $authContext = New-BcAuthContext -includeDeviceLogin -deviceLoginTimeout ([TimeSpan]::FromSeconds(0))
             MaskValueInLog -value $authContext.deviceCode
             Add-Content -Path $env:GITHUB_ENV -Value "adminCenterApiCredentials={""deviceCode"":""$($authContext.deviceCode)""}"
+            CleanupAfterBcContainerHelper -bcContainerHelperPath $bcContainerHelperPath
           }
 
       - name: Create Development Environment
@@ -79,13 +79,13 @@ jobs:
           reUseExistingEnvironment: ${{ github.event.inputs.reUseExistingEnvironment }} 
           adminCenterApiCredentials: ${{ env.adminCenterApiCredentials }} 
 
-  postProcess :
+  postProcess:
     runs-on: [ windows-latest ]
-    needs : [ initialization ,  CreateEnvironment ]
+    needs: [ initialization,  CreateEnvironment ]
     steps:
       - name: Finalizing the workflow
-        id : postProcess
+        id: postProcess
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
         with: 
-          eventId : "DO0093"
-          telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}   
+          eventId: "DO0093"
+          telemetryScope: ${{ needs.initialization.outputs.telemetryScope }}   
