--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: SetupRepositories
-        run: e2eTests\SetupRepositories.ps1
+        run: e2eTests\SetupRepositories.ps1 -actor '${{ github.actor }}' -token '${{ Secrets.OrgPAT }}'
 
   Test:
     runs-on: [ windows-latest ]
