--- a/Actions/WorkflowInitialize/action.yaml
+++ b/Actions/WorkflowInitialize/action.yaml
@@ -8,7 +8,7 @@ outputs:
   correlationId:
     description: A correlation Id for the workflow
     value: ${{ steps.workflowinitialize.outputs.correlationId }}
-  telemetryScope:
+  telemetryScopeJson:
     description: A telemetryScope that covers the workflow
     value: ${{ steps.workflowinitialize.outputs.telemetryScopeJson }}
 runs:
