--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,16 +14,25 @@ defaults:
 jobs:
   Test:
     runs-on: [ windows-latest ]
+    outputs: ${{ steps.runfulltests.outputs.runFullTests}}
 
     steps:
       - uses: actions/checkout@v2
 
       - name: Run basic tests
         run: Tests\RunTests.ps1
+      
+      - name: Determine if full tests should run
+        id: runfulltests
+        run: |
+          $runfulltests = @('Yes','No')['${{ Secrets.OrgPAT }}' -eq '']
+          Write-Host "::set-output name=runfulltests::$runfulltests"
+          Write-Host "set-output name=runfulltests::$runfulltests"
 
   SetupRepositories:
     runs-on: [ windows-latest ]
-    if: ${{ Secrets.OgrPAT }}
+    needs: [ Test ]
+    if: ('${{ needs.Test.outputs.runfulltests }}' == 'Yes')
     outputs:
       actionsRepo: ${{ steps.setup.outputs.actionsRepo }}
       perTenantExtensionRepo: ${{ steps.setup.outputs.perTenantExtensionRepo }}
@@ -38,8 +47,8 @@ jobs:
 
   TestAlGoPte:
     runs-on: [ windows-latest ]
-    needs: [ SetupRepositories ]
-    if: ${{ Secrets.OgrPAT }}
+    needs: [ Test, SetupRepositories ]
+    if: ('${{ needs.Test.outputs.runfulltests }}' == 'Yes')
 
     steps:
       - uses: actions/checkout@v2
@@ -49,8 +58,8 @@ jobs:
 
   RemoveRepositories:
     runs-on: [ windows-latest ]
-    needs: [ SetupRepositories, TestAlGoPte ]
-    if: always() && (needs.SetupRepositories.result == 'Success')
+    needs: [ Test, SetupRepositories, TestAlGoPte ]
+    if: always() && ('${{ needs.SetupRepositories.result }}' == 'Success') && ('${{ needs.Test.outputs.runfulltests }}' == 'Yes')
 
     steps:
       - uses: actions/checkout@v2
