--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run tests
-        run: e2eTests\Test-AL-Go-pte.ps1 -actor '${{ github.actor }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.perTenantExtensionRepo }}' -adminCenterApiCredentials ''
+        run: e2eTests\Test-AL-Go-pte.ps1 -actor '${{ github.actor }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.perTenantExtensionRepo }}' -adminCenterApiCredentials '${{ Secrets.adminCenterApiCredentials }}'
 
   TestAlGoAppSource:
     runs-on: [ windows-latest ]
@@ -66,7 +66,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run tests
-        run: e2eTests\Test-AL-Go-appSource.ps1 -actor '${{ github.actor }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.appSourceAppRepo }}' -licenseFileUrl '${{ Secrets.LicenseFileUrl }}'
+        run: e2eTests\Test-AL-Go-appSource.ps1 -actor '${{ github.actor }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.appSourceAppRepo }}' -adminCenterApiCredentials '' -licenseFileUrl '${{ Secrets.LicenseFileUrl }}'
 
   RemoveRepositories:
     runs-on: [ windows-latest ]
