--- a/Templates/Per Tenant Extension/.github/workflows/CreateRelease.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateRelease.yaml
@@ -191,7 +191,7 @@ jobs:
                       Set-Alias -Name Set-AzureStorageBlobContent -Value Set-AzStorageBlobContent
                   }
 
-                  $storageContext = $ENV:StorageContext
+                  $storageContext = [System.Text.Encoding]::Utf8.GetString([System.Convert]::FromBase64String($ENV:StorageContext))
 
                   $storageAccount = $StorageContext | ConvertFrom-Json
                   if ($storageAccount.PSObject.Properties.Name -eq "sastoken") {
