--- a/Templates/AppSource App/.github/workflows/CICD.yaml
+++ b/Templates/AppSource App/.github/workflows/CICD.yaml
@@ -25,12 +25,13 @@ defaults:
   run:
     shell: PowerShell
 
+env:
+  workflowDepth: 1
+
 jobs:
   Initialization:
     if: github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success'
     runs-on: [ windows-latest ]
-    env:
-      workflowDepth: 1
     outputs:
       telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
       settings: ${{ steps.ReadSettings.outputs.SettingsJson }}
@@ -76,14 +77,10 @@ jobs:
     
       - name: Checkout Pull Request
         if: github.event_name == 'workflow_run' && github.event.workflow_run.head_repository.full_name == github.repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           lfs: true
           ref: ${{ github.event.workflow_run.head_branch }}
-
-      - name: Dump
-        run: |
-          Write-Host "YES!"
 
       - name: Download Fork Pull Request Changes
         if: github.event_name == 'workflow_run' && github.event.workflow_run.head_repository.full_name != github.repository
@@ -331,12 +328,13 @@ jobs:
     
       - name: Checkout Pull Request
         if: github.event_name == 'workflow_run' && github.event.workflow_run.head_repository.full_name == github.repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           lfs: true
           ref: ${{ github.event.workflow_run.head_branch }}
 
-      - name: Download artifacts
+      - name: Download thisbuild artifacts
+        if: env.WorkflowDepth > 1
         uses: actions/download-artifact@v3
         with:
           path: '${{ github.workspace }}\.dependencies'
@@ -428,6 +426,24 @@ jobs:
           ProjectDependenciesJson: ${{ needs.Initialization.outputs.projectDependenciesJson }}
           settingsJson: ${{ env.Settings }}
           SecretsJson: ${{ env.RepoSecrets }}
+
+      - name: Upload thisbuild artifacts - apps
+        if: env.WorkflowDepth > 1
+        uses: actions/upload-artifact@v3
+        with:
+          name: 'thisbuild-${{ matrix.project }}-Apps'
+          path: '${{ matrix.project }}/.buildartifacts/Apps/'
+          if-no-files-found: ignore
+          retention-days: 1
+
+      - name: Upload thisbuild artifacts - test apps
+        if: env.WorkflowDepth > 1
+        uses: actions/upload-artifact@v3
+        with:
+          name: 'thisbuild-${{ matrix.project }}-TestApps'
+          path: '${{ matrix.project }}/.buildartifacts/TestApps/'
+          if-no-files-found: ignore
+          retention-days: 1
 
       - name: Calculate Artifact names
         id: calculateArtifactNames
